tests/compile_fail/no_std/runtime/thread_local.rs
pui::make_counter_tl! {
    type _Runtime = u8;
}

fn main() {}
